General code optimization to reduce number of warnings triggered, and to remove additional unneeded LotR components